# StephensSausageRollSolver

./: Cargo.toml  README.md  index.html  justfile
.github/workflows/: deploy.yml
assets/: index-B5LMjlJL.js  index-DZDKsmKE.css  index-MIRzOnaL.css  index-aOcHudqF.js  physicsWorker-Z5ue0Jm-.js  physicsWorker-kFA5dkdg.js  stephens_sausage_roll_solver_bg-BXR93t9k.wasm  stephens_sausage_roll_solver_bg-DeFeMfaa.wasm
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Graph.tsx  LevelDisplay.tsx  LevelEditor.tsx  MyGraph.tsx  complexLevel.json  index.css  main.tsx  physicsWorker.ts  tmp.json  types.ts  worker.ts
frontend/src/LevelEditor/: Controls.tsx  Presets.tsx  SizeControls.tsx  TileGrid.tsx
src/: graph.rs  lib.rs  solver.rs
src/graph/: camera.rs  compute_shader.rs
src/shaders/: edge_mesh_generation.wgsl
src/solver/: test-cases.json  test.rs
