[package]
name = "stephens_sausage_roll_solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test"

[dependencies]
bevy_math = "0.15.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.216", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.134"
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["console"] }
